// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
Array [
  Array [
    "main.js",
    2969,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 2969,
    },
  ],
  Array [
    "main.js.gz",
    867,
    Object {
      "compressed": true,
      "size": 867,
    },
  ],
  Array [
    "newFile.js",
    23,
    Object {
      "related": Object {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  Array [
    "newFile.js.gz",
    43,
    Object {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
Array [
  Array [
    "async.async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15911,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15911,
    },
  ],
  Array [
    "main.js.gz",
    3891,
    Object {
      "compressed": true,
      "size": 3891,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
Array [
  Array [
    "async.async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15911,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15911,
    },
  ],
  Array [
    "main.js.gz",
    3891,
    Object {
      "compressed": true,
      "size": 3891,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.b97914b5d39d92c9b2db.js",
    194,
    Object {
      "contenthash": "b97914b5d39d92c9b2db",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.b97914b5d39d92c9b2db.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.b97914b5d39d92c9b2db.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.e31fa86361f8fe2a5bd2.js",
    15998,
    Object {
      "contenthash": "e31fa86361f8fe2a5bd2",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.e31fa86361f8fe2a5bd2.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.e31fa86361f8fe2a5bd2.js.gz",
    3976,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3976,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15967,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15967,
    },
  ],
  Array [
    "main.js.gz",
    3954,
    Object {
      "compressed": true,
      "size": 3954,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
Array [
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15895,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15895,
    },
  ],
  Array [
    "main.js.gz",
    3888,
    Object {
      "compressed": true,
      "size": 3888,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
Array [
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    94117,
    Object {
      "related": Object {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.png.gz",
    73309,
    Object {
      "compressed": true,
      "size": 73309,
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15895,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15895,
    },
  ],
  Array [
    "main.js.gz",
    3888,
    Object {
      "compressed": true,
      "size": 3888,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15951,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15951,
    },
  ],
  Array [
    "main.js.gz",
    3951,
    Object {
      "compressed": true,
      "size": 3951,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15988,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
  Array [
    "main.js.gz",
    3974,
    Object {
      "compressed": true,
      "size": 3974,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.br",
    123,
    Object {
      "compressed": true,
      "size": 123,
    },
  ],
  Array [
    "async.js.custom",
    194,
    Object {
      "compressed": true,
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15951,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15951,
    },
  ],
  Array [
    "main.js.br",
    3455,
    Object {
      "compressed": true,
      "size": 3455,
    },
  ],
  Array [
    "main.js.custom",
    15951,
    Object {
      "compressed": true,
      "size": 15951,
    },
  ],
  Array [
    "main.js.gz",
    3951,
    Object {
      "compressed": true,
      "size": 3951,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.br",
    123,
    Object {
      "compressed": true,
      "size": 123,
    },
  ],
  Array [
    "async.js.custom",
    194,
    Object {
      "compressed": true,
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15951,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15951,
    },
  ],
  Array [
    "main.js.br",
    3455,
    Object {
      "compressed": true,
      "size": 3455,
    },
  ],
  Array [
    "main.js.custom",
    15951,
    Object {
      "compressed": true,
      "size": 15951,
    },
  ],
  Array [
    "main.js.gz",
    3951,
    Object {
      "compressed": true,
      "size": 3951,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15951,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15951,
    },
  ],
  Array [
    "main.js.gz",
    3951,
    Object {
      "compressed": true,
      "size": 3951,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15951,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15951,
    },
  ],
  Array [
    "main.js.gz",
    3951,
    Object {
      "compressed": true,
      "size": 3951,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=8fecf43e4428ac0cc929",
    194,
    Object {
      "fullhash": "8fecf43e4428ac0cc929",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    3998,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3998,
    },
  ],
  Array [
    "main.js?var=8fecf43e4428ac0cc929",
    16154,
    Object {
      "fullhash": "8fecf43e4428ac0cc929",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 16154,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `Array []`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
  Array [
    "stats.json",
    155,
    Object {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `Array []`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=b65915238e8faf4cb69c",
    194,
    Object {
      "fullhash": "b65915238e8faf4cb69c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    4034,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4034,
    },
  ],
  Array [
    "main.js.map.gz",
    4140,
    Object {
      "compressed": true,
      "size": 4140,
    },
  ],
  Array [
    "main.js.map?var=b65915238e8faf4cb69c",
    13102,
    Object {
      "development": true,
      "related": Object {
        "gzipped": "main.js.map.gz",
      },
      "size": 13102,
    },
  ],
  Array [
    "main.js?var=b65915238e8faf4cb69c",
    16215,
    Object {
      "fullhash": "b65915238e8faf4cb69c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=b65915238e8faf4cb69c",
      },
      "size": 16215,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.br",
    123,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  Array [
    "async.async.js.compress",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js.custom?foo=bar#hash",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=975abbe18f7c0f04a3e0",
    194,
    Object {
      "fullhash": "975abbe18f7c0f04a3e0",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.br",
    3501,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3501,
    },
  ],
  Array [
    "main.js.compress",
    16157,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16157,
    },
  ],
  Array [
    "main.js.custom?foo=bar#hash",
    16157,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16157,
    },
  ],
  Array [
    "main.js.gz",
    4003,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4003,
    },
  ],
  Array [
    "main.js?var=975abbe18f7c0f04a3e0",
    16157,
    Object {
      "fullhash": "975abbe18f7c0f04a3e0",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16157,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=975abbe18f7c0f04a3e0",
    194,
    Object {
      "fullhash": "975abbe18f7c0f04a3e0",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz",
    4003,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4003,
    },
  ],
  Array [
    "main.js?var=975abbe18f7c0f04a3e0",
    16157,
    Object {
      "fullhash": "975abbe18f7c0f04a3e0",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 16157,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `Array []`;

exports[`CompressionPlugin should work: warnings 1`] = `Array []`;
